updated Swagger Doc